stylesheet.css
/* HOME SECTION */

#myPicture {
  margin-top: 40%; 
  margin-left: 5%;
  margin-bottom: 5%;
  margin-right: 5%;
}

.welcome {
	margin-top: 120px;
	margin-bottom: 30px;
	color:white; 
	padding-bottom: 0px;
}

.blurb {
	text-align: center;
	color: white;
	margin-left: 20px;
	margin-right: 20px;
}

.box {
	border-style:solid;
	border-spacing: 5px;
	border-color: white;
}

.current {
  text-align: center;
	font-size:2em;
	color: white;
}

/* SKILLS SECTION */

.list-headers {
	text-align: left;
}

ul {
	text-align: left;
	font-size: 1.1em;
	list-style-type: square;
}

/* PROJECTS SECTION */

table, td {
   border: 1px white solid;
   color:white;
}

section ul li {
	color: white;
}

/* FLIPPING CARDS */

.card-container {
	text-align: center;
	perspective: 900px;
	background-color: #81D8D0;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 92vw;
	height: 75.1vh;
	margin-left: 4%;
	margin-top: 4%;
}

.card {
	color:white;
	position:relative;
	text-align: center;
	height: inherit;
	background-color: inherit;
	width:inherit;
	height:inherit;
	overflow-x: hidden;
	overflow-y: auto;
	transform: rotateX(540deg);
	transform-style: preserve-3d;
}

.blueBox {
	background-color: #2b3856;
	transform-style:preserve-3d;
}

.front, .back {
	position: relative;
	float: top;
	width: 100%;
	height: 100%;
	top: 0px;
	left: 0px;
	background-color: #2b3856; 
	backface-visibility: hidden;
}

.front p {
	font-size: 1.2em;
}

.back {
	float: bottom;
	width: 0%;
	height: 0%;
	transform: rotateX(180deg);
}

.back ul {
	line-height: 40px;
	list-style-type: none;
	margin: 0;
	background-color: inherit;
}

/* BUTTONS */

button {
	color: white !important;
	background-color: #2b3856;
	padding: 10px 24px;
	border:none;
	text-decoration: none;
	text-align: center;
	font-size: 16px;
	display: inline-block;
}

.footer {
	position: absolute;
	bottom: 10%;
	left: 0;
	right: 0;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

/* SITE */

.site-wrapper {
	background-color: #81D8D0;
}


/* GENERAL */

html {
	background-size: cover;
	background-color: #81D8D0; 
}

h1 {
	text-align: center;
}

.links, .links:hover {
	color: #81D8D0;
}

a:visited, a:active {
	color: #81D8D0;
}

.links{
	font-size: 1.2em;
}

section div h1 {
	color: white;
	text-align: center;
}

/* Scrollbar */
::-webkit-scrollbar {
	width: 12px ;
}
  
::-webkit-scrollbar-track { /* TRACK */
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.3);
}

::-webkit-scrollbar-thumb { /* Cursor */
	background: rgba(255,255,255,1);
}

/** MOBILE VERSION (Sadly not mobile-first :[ )**/
@media screen and (max-width:  767px){

	/** GENERAL **/
	.card {
		overflow-y: none;
	}

	/** HOME **/
	#myPicture {
		width: 90%;
		height: 90%;
		margin: 20px 15px 0px 20px;
		border: 1px solid black;
	}

	.welcome {
		margin-top: 10px;
		margin-bottom: 10px;
		font-size: 2em;
	}

	.blurb {
		font-size: 0.65em;
		margin-left: 20px;
		margin-right: 20px;
	}

	/** SKILLS **/
	ul {
		padding-left: 20px;
	}

	ul li {
		font-size: 0.65em;
	}

	.list-headers {
		font-size: 2em;
	}

	.ignore-on-mobile {
		display: none;
	}

	/** PROJECTS **/
	td{
		font-size: 0.65em;
	}
}

